added master df nb

--- a/notebooks/ta_10_access-water_data.ipynb
+++ b/notebooks/ta_10_access-water_data.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
+    "# importing relevant packages\n",
+    "%run / Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# import useful functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
+    "%run / Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
    ]
   },
   {
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fetching hidden api key from desktop stored under 'water_api_key'\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/keys.py"
+    "# fetching hidden api key from desktop stored under 'water_api_key'\n",
+    "%run / Users/thomasadler/Desktop/futuristic-platipus/keys.py"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#defining working directory\n",
+    "# defining working directory\n",
     "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
    ]
   },
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "#setting API endpoint, dataset, key and client profile\n",
+    "# setting API endpoint, dataset, key and client profile\n",
     "socrata_domain = 'data.waterpointdata.org'\n",
     "socrata_dataset_identifier = 'eqje-vguj'\n",
     "socrata_token = os.environ.get(water_api_key)\n",
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating query to fetch Uganda water points, all columns included\n",
+    "# creating query to fetch Uganda water points, all columns included\n",
     "water_uganda_query = \"\"\"\n",
     "select\n",
     "    *\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#query dataset and store in dataframe\n",
+    "# query dataset and store in dataframe\n",
     "results = client.get(socrata_dataset_identifier, query=water_uganda_query)\n",
     "water_df = pd.DataFrame.from_records(results)"
    ]
@@ -112,8 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#keep raw dataset untouched\n",
-    "uganda_water_df=water_df.copy()"
+    "# keep raw dataset untouched\n",
+    "uganda_water_df = water_df.copy()"
    ]
   },
   {
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "#short look at data\n",
+    "# short look at data\n",
     "uganda_water_df.tail()"
    ]
   },
@@ -434,7 +434,7 @@
     }
    ],
    "source": [
-    "#looking at column datatypes\n",
+    "# looking at column datatypes\n",
     "uganda_water_df.info()"
    ]
   },
@@ -475,48 +475,32 @@
     }
    ],
    "source": [
-    "#drop irrelevant columns\n",
-    "uganda_water_df_clean=pd.DataFrame(uganda_water_df.drop(columns=['clean_country_id','activity_id', 'adm1','adm2','adm3','country_id',\\\n",
-    "                                                    'country_name','status','water_source','management',\\\n",
-    "                                                    'water_tech','orig_lnk','photo_lnk','data_lnk',\\\n",
-    "                                                    'public_data_source','converted','created_timestamp',\\\n",
-    "                                                    'days_since_report','updated']))\n",
+    "# drop irrelevant columns\n",
+    "uganda_water_df_clean = pd.DataFrame(uganda_water_df.drop(columns=['clean_country_id', 'activity_id', 'adm1', 'adm2', 'adm3', 'country_id',\n",
+    "                                                                   'country_name', 'status', 'water_source', 'management',\n",
+    "                                                                   'water_tech', 'orig_lnk', 'photo_lnk', 'data_lnk',\n",
+    "                                                                   'public_data_source', 'converted', 'created_timestamp',\n",
+    "                                                                   'days_since_report', 'updated']))\n",
     "\n",
-    "#check current columns\n",
+    "# check current columns\n",
     "uganda_water_df_clean.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fecal_coliform_presence distribution: Present    1035\n",
-      "Absent      275\n",
-      "Name: fecal_coliform_presence, dtype: int64\n",
-      "is_latest distribution: True     96575\n",
-      "False    11682\n",
-      "Name: is_latest, dtype: int64\n",
-      "is_urban distribution: False    105553\n",
-      "True       2704\n",
-      "Name: is_urban, dtype: int64\n",
-      "status_id distribution: Yes        87016\n",
-      "No         18666\n",
-      "Unknown     2575\n",
-      "Name: status_id, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#checking contents of columns we want to convert to binary\n",
-    "print('fecal_coliform_presence distribution:',uganda_water_df_clean['fecal_coliform_presence'].value_counts())\n",
-    "print('is_latest distribution:',uganda_water_df_clean['is_latest'].value_counts())\n",
-    "print('is_urban distribution:',uganda_water_df_clean['is_urban'].value_counts())\n",
-    "print('status_id distribution:',uganda_water_df_clean['status_id'].value_counts())"
+    "# checking contents of columns we want to convert to binary\n",
+    "print('fecal_coliform_presence distribution:',\n",
+    "      uganda_water_df_clean['fecal_coliform_presence'].value_counts())\n",
+    "print('is_latest distribution:',\n",
+    "      uganda_water_df_clean['is_latest'].value_counts())\n",
+    "print('is_urban distribution:',\n",
+    "      uganda_water_df_clean['is_urban'].value_counts())\n",
+    "print('status_id distribution:',\n",
+    "      uganda_water_df_clean['status_id'].value_counts())"
    ]
   },
   {
@@ -594,16 +578,33 @@
     }
    ],
    "source": [
-    "#convert to binary\n",
-    "uganda_water_df_clean['fecal_coliform_presence']=uganda_water_df_clean['fecal_coliform_presence'].map({'Present': 1, 'Absent': 0})\n",
+    "# convert to binary\n",
+    "uganda_water_df_clean['fecal_coliform_presence'] = uganda_water_df_clean[\n",
+    "    'fecal_coliform_presence'].map({\n",
+    "        'Present': 1,\n",
+    "        'Absent': 0\n",
+    "    })\n",
     "\n",
-    "uganda_water_df_clean['is_latest'] = uganda_water_df_clean['is_latest'].astype('int64')\n",
+    "uganda_water_df_clean['is_latest'] = uganda_water_df_clean['is_latest'].astype(\n",
+    "    'int64')\n",
     "\n",
-    "uganda_water_df_clean['is_urban']=uganda_water_df_clean['is_urban'].map({True: 1, False: 0})\n",
+    "uganda_water_df_clean['is_urban'] = uganda_water_df_clean['is_urban'].map({\n",
+    "    True:\n",
+    "    1,\n",
+    "    False:\n",
+    "    0\n",
+    "})\n",
     "\n",
-    "uganda_water_df_clean['status_id']=uganda_water_df_clean['status_id'].map({'Yes': 1, 'No': 0, 'Unknown': 0})\n",
+    "uganda_water_df_clean['status_id'] = uganda_water_df_clean['status_id'].map({\n",
+    "    'Yes':\n",
+    "    1,\n",
+    "    'No':\n",
+    "    0,\n",
+    "    'Unknown':\n",
+    "    0\n",
+    "})\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "uganda_water_df_clean.info()"
    ]
   },
@@ -675,16 +676,16 @@
     }
    ],
    "source": [
-    "#convert to number\n",
-    "num_columns=['distance_to_city', 'distance_to_primary', 'lat_deg', 'lat_deg_original',\\\n",
-    "             'lon_deg', 'lon_deg_original', 'distance_to_secondary', 'distance_to_tertiary',\\\n",
-    "             'distance_to_town', 'fecal_coliform_value', 'cluster_size', 'count', 'crucialness',\\\n",
-    "             'install_year', 'local_population', 'pressure',\\\n",
-    "             'rehab_priority', 'served_population', 'staleness_score', 'usage_cap']\n",
+    "# convert to number\n",
+    "num_columns = ['distance_to_city', 'distance_to_primary', 'lat_deg', 'lat_deg_original',\n",
+    "               'lon_deg', 'lon_deg_original', 'distance_to_secondary', 'distance_to_tertiary',\n",
+    "               'distance_to_town', 'fecal_coliform_value', 'cluster_size', 'count', 'crucialness',\n",
+    "               'install_year', 'local_population', 'pressure',\n",
+    "               'rehab_priority', 'served_population', 'staleness_score', 'usage_cap']\n",
     "\n",
     "for col in num_columns:\n",
     "    float_converter(uganda_water_df_clean, col)\n",
-    "#check\n",
+    "# check\n",
     "uganda_water_df_clean.info()"
    ]
   },
@@ -713,14 +714,13 @@
     }
    ],
    "source": [
-    "#convert to datetime\n",
+    "# convert to datetime\n",
     "for column in ['report_date', 'install_year']:\n",
     "    date_converter(uganda_water_df_clean, column)\n",
-    "    \n",
     "\n",
-    "#check\n",
+    "# check\n",
     "print(uganda_water_df_clean['report_date'].head())\n",
-    "print(uganda_water_df_clean['install_year'].head())\n"
+    "print(uganda_water_df_clean['install_year'].head())"
    ]
   },
   {
@@ -738,10 +738,10 @@
     }
    ],
    "source": [
-    "#select columns with string\n",
+    "# select columns with string\n",
     "str_columns = list(uganda_water_df_clean.select_dtypes(\"object\").columns)\n",
     "\n",
-    "#remove special characters from string columns\n",
+    "# remove special characters from string columns\n",
     "for col in str_columns:\n",
     "    uganda_water_df_clean[col].str.replace('[^\\w\\s]', '')"
    ]
@@ -811,8 +811,8 @@
     }
    ],
    "source": [
-    "#percentage of NA values by columns\n",
-    "uganda_water_df_clean.isna().mean()*100"
+    "# percentage of NA values by columns\n",
+    "uganda_water_df_clean.isna().mean() * 100"
    ]
   },
   {
@@ -874,11 +874,12 @@
     }
    ],
    "source": [
-    "#remove columsn where >50% are missing values, using the thresh parameter (0.5)\n",
-    "uganda_water_df_clean = uganda_water_df_clean.dropna(axis=1, thresh=0.5*len(uganda_water_df_clean))\n",
+    "# remove columsn where >50% are missing values, using the thresh parameter (0.5)\n",
+    "uganda_water_df_clean = uganda_water_df_clean.dropna(\n",
+    "    axis=1, thresh=0.5 * len(uganda_water_df_clean))\n",
     "\n",
-    "#check\n",
-    "uganda_water_df_clean.isna().mean()*100"
+    "# check\n",
+    "uganda_water_df_clean.isna().mean() * 100"
    ]
   },
   {
@@ -894,8 +895,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#checking duplicate rows\n",
-    "#uganda_water_df_clean.duplicated().sum()"
+    "# checking duplicate rows\n",
+    "# uganda_water_df_clean.duplicated().sum()"
    ]
   },
   {
@@ -904,8 +905,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#checking duplicate columns\n",
-    "#uganda_water_df_clean.T.duplicated().sum()"
+    "# checking duplicate columns\n",
+    "# uganda_water_df_clean.T.duplicated().sum()"
    ]
   },
   {
@@ -1120,10 +1121,11 @@
     }
    ],
    "source": [
-    "#choose numerical columns\n",
-    "uganda_water_df_clean_numerical=uganda_water_df_clean[uganda_water_df_clean.select_dtypes(exclude='object').columns]\n",
+    "# choose numerical columns\n",
+    "uganda_water_df_clean_numerical = uganda_water_df_clean[\n",
+    "    uganda_water_df_clean.select_dtypes(exclude='object').columns]\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "uganda_water_df_clean_numerical.head()"
    ]
   },
@@ -1146,12 +1148,12 @@
     }
    ],
    "source": [
-    "#choose columns with null values\n",
+    "# choose columns with null values\n",
     "null_cols = uganda_water_df_clean_numerical.isna().sum()\n",
     "cols_to_impute = null_cols[null_cols > 0].index\n",
-    "cols_to_impute=cols_to_impute.drop('install_year')\n",
+    "cols_to_impute = cols_to_impute.drop('install_year')\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "cols_to_impute"
    ]
   },
@@ -1262,7 +1264,7 @@
     }
    ],
    "source": [
-    "#showing distribution of value we want to inpute and where mean/median is situated\n",
+    "# showing distribution of value we want to inpute and where mean/median is situated\n",
     "for col in cols_to_impute:\n",
     "    plt.figure()\n",
     "    sns.distplot(uganda_water_df_clean[col])\n",
@@ -1270,7 +1272,7 @@
     "    plt.axvline(uganda_water_df_clean[col].median(), c='gold', label='median')\n",
     "    plt.legend()\n",
     "    plt.title(f'Density plot of {col}')\n",
-    "    plt.show() "
+    "    plt.show()"
    ]
   },
   {
@@ -1368,11 +1370,11 @@
     }
    ],
    "source": [
-    "#fill missing values with adm4 median\n",
+    "# fill missing values with adm4 median\n",
     "for col in cols_to_impute:\n",
     "    missing_to_regional_median(uganda_water_df_clean, col, 'clean_adm4')\n",
-    "    \n",
-    "#check\n",
+    "\n",
+    "# check\n",
     "uganda_water_df_clean.isna().sum()"
    ]
   },
@@ -1464,11 +1466,11 @@
     }
    ],
    "source": [
-    "#fill missing values with adm3 median\n",
+    "# fill missing values with adm3 median\n",
     "for col in cols_to_impute:\n",
     "    missing_to_regional_median(uganda_water_df_clean, col, 'clean_adm3')\n",
-    "    \n",
-    "#check\n",
+    "\n",
+    "# check\n",
     "uganda_water_df_clean.isna().sum()"
    ]
   },
@@ -1560,11 +1562,11 @@
     }
    ],
    "source": [
-    "#fill missing values with adm2 median\n",
+    "# fill missing values with adm2 median\n",
     "for col in cols_to_impute:\n",
     "    missing_to_regional_median(uganda_water_df_clean, col, 'clean_adm2')\n",
-    "    \n",
-    "#check\n",
+    "\n",
+    "# check\n",
     "uganda_water_df_clean.isna().sum()"
    ]
   },
@@ -1656,11 +1658,11 @@
     }
    ],
    "source": [
-    "#fill missing values with adm1 median\n",
+    "# fill missing values with adm1 median\n",
     "for col in cols_to_impute:\n",
     "    missing_to_regional_median(uganda_water_df_clean, col, 'clean_adm1')\n",
-    "    \n",
-    "#check\n",
+    "\n",
+    "# check\n",
     "uganda_water_df_clean.isna().sum()"
    ]
   },
@@ -1728,11 +1730,12 @@
     }
    ],
    "source": [
-    "#fill the final null values with the median value of the whole dataset\n",
+    "# fill the final null values with the median value of the whole dataset\n",
     "for col in cols_to_impute:\n",
-    "    uganda_water_df_clean[col] = uganda_water_df_clean[col].fillna(uganda_water_df_clean[col].median())\n",
+    "    uganda_water_df_clean[col] = uganda_water_df_clean[col].fillna(\n",
+    "        uganda_water_df_clean[col].median())\n",
     "\n",
-    "#check remaining null values\n",
+    "# check remaining null values\n",
     "uganda_water_df_clean.isna().sum()"
    ]
   },
@@ -1749,7 +1752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export to cleaned dataset to csv\n",
+    "# export to cleaned dataset to csv\n",
     "uganda_water_df_clean.to_csv(filepath + 'uganda_water_df_clean.csv')"
    ]
   },
