--- a/notebooks/ta_20_access_demographic_data.ipynb
+++ b/notebooks/ta_20_access_demographic_data.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
+    "# importing relevant packages\n",
+    "%run / Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# import useful functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
+    "%run / Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#defining working directory\n",
+    "# defining working directory\n",
     "filepath = '/Users/thomasadler/Desktop/capstone_docs/raw_demographic/'"
    ]
   },
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#defining our four regions\n",
+    "# defining our four regions\n",
     "regions_df = ['eastern', 'western', 'central', 'northern']"
    ]
   },
@@ -76,11 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#loading our four datasets\n",
-    "eastern_df=pd.DataFrame(pd.read_excel(f'{filepath}{regions_df[0]}_demographic.xlsx'))\n",
-    "western_df=pd.DataFrame(pd.read_excel(f'{filepath}{regions_df[1]}_demographic.xlsx'))\n",
-    "central_df=pd.DataFrame(pd.read_excel(f'{filepath}{regions_df[2]}_demographic.xlsx'))\n",
-    "northern_df=pd.DataFrame(pd.read_excel(f'{filepath}{regions_df[3]}_demographic.xlsx'))"
+    "# loading our four datasets\n",
+    "eastern_df = pd.DataFrame(pd.read_excel(\n",
+    "    f'{filepath}{regions_df[0]}_demographic.xlsx'))\n",
+    "western_df = pd.DataFrame(pd.read_excel(\n",
+    "    f'{filepath}{regions_df[1]}_demographic.xlsx'))\n",
+    "central_df = pd.DataFrame(pd.read_excel(\n",
+    "    f'{filepath}{regions_df[2]}_demographic.xlsx'))\n",
+    "northern_df = pd.DataFrame(pd.read_excel(\n",
+    "    f'{filepath}{regions_df[3]}_demographic.xlsx'))"
    ]
   },
   {
@@ -90,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#defining our four regions datasets\n",
+    "# defining our four regions datasets\n",
     "regions_df = [eastern_df, western_df, central_df, northern_df]"
    ]
   },
@@ -322,10 +326,10 @@
     }
    ],
    "source": [
-    "#joining all datasets on similar columns\n",
+    "# joining all datasets on similar columns\n",
     "demographic = pd.concat(regions_df, axis=0)\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "demographic.head()"
    ]
   },
@@ -336,8 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#keeping our raw dataset untouched\n",
-    "total_demographic=demographic.copy()"
+    "# keeping our raw dataset untouched\n",
+    "total_demographic = demographic.copy()"
    ]
   },
   {
@@ -568,7 +572,7 @@
     }
    ],
    "source": [
-    "#check\n",
+    "# check\n",
     "total_demographic.head()"
    ]
   },
@@ -622,7 +626,7 @@
     }
    ],
    "source": [
-    "#check\n",
+    "# check\n",
     "total_demographic.info()"
    ]
   },
@@ -673,7 +677,7 @@
     }
    ],
    "source": [
-    "#check proportion of missing values\n",
+    "# check proportion of missing values\n",
     "total_demographic.isna().sum()"
    ]
   },
@@ -705,11 +709,11 @@
     }
    ],
    "source": [
-    "#choose columns with null values\n",
+    "# choose columns with null values\n",
     "null_cols = total_demographic.isna().sum()\n",
     "cols_to_impute = null_cols[null_cols > 0].index\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "cols_to_impute"
    ]
   },
@@ -760,11 +764,11 @@
     }
    ],
    "source": [
-    "#fill missing parish columns with subcounty average\n",
+    "# fill missing parish columns with subcounty average\n",
     "for col in cols_to_impute:\n",
     "    missing_to_regional_median(total_demographic, col, 'subcounty')\n",
-    "    \n",
-    "#check\n",
+    "\n",
+    "# check\n",
     "total_demographic.isna().sum()"
    ]
   },
@@ -788,11 +792,11 @@
     }
    ],
    "source": [
-    "#choose columns with null values\n",
+    "# choose columns with null values\n",
     "null_cols2 = total_demographic.isna().sum()\n",
     "cols_to_impute2 = null_cols[null_cols > 0].index\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "cols_to_impute2"
    ]
   },
@@ -822,12 +826,13 @@
     }
    ],
    "source": [
-    "#fill subsequent missing parish columns with country average\n",
+    "# fill subsequent missing parish columns with country average\n",
     "for col in cols_to_impute2:\n",
-    "    total_demographic[col] = total_demographic[col].fillna(total_demographic[col].mean())\n",
+    "    total_demographic[col] = total_demographic[col].fillna(\n",
+    "        total_demographic[col].mean())\n",
     "\n",
-    "#check no more null values\n",
-    "total_demographic.isna().sum().sum()==0"
+    "# check no more null values\n",
+    "total_demographic.isna().sum().sum() == 0"
    ]
   },
   {
@@ -848,8 +853,8 @@
     }
    ],
    "source": [
-    "#check duplicated rows\n",
-    "total_demographic.duplicated().sum()==0"
+    "# check duplicated rows\n",
+    "total_demographic.duplicated().sum() == 0"
    ]
   },
   {
@@ -870,8 +875,8 @@
     }
    ],
    "source": [
-    "#check duplicated columns\n",
-    "total_demographic.T.duplicated().sum()==0"
+    "# check duplicated columns\n",
+    "total_demographic.T.duplicated().sum() == 0"
    ]
   },
   {
@@ -990,13 +995,14 @@
     }
    ],
    "source": [
-    "#calculate population for each subcounty\n",
-    "tot_pop_subcounty=total_demographic[['subcounty','tot_pop_parish']].groupby('subcounty').sum()\n",
+    "# calculate population for each subcounty\n",
+    "tot_pop_subcounty = total_demographic[[\n",
+    "    'subcounty', 'tot_pop_parish']].groupby('subcounty').sum()\n",
     "\n",
-    "#rename column\n",
+    "# rename column\n",
     "tot_pop_subcounty.columns = ['tot_pop_subcounty']\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "tot_pop_subcounty"
    ]
   },
@@ -1228,10 +1234,11 @@
     }
    ],
    "source": [
-    "#add the subounty population to our main dataframe\n",
-    "total_demographic=total_demographic.merge(tot_pop_subcounty, how='left', on='subcounty')\n",
+    "# add the subounty population to our main dataframe\n",
+    "total_demographic = total_demographic.merge(\n",
+    "    tot_pop_subcounty, how='left', on='subcounty')\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "total_demographic.head()"
    ]
   },
@@ -1254,11 +1261,13 @@
     }
    ],
    "source": [
-    "#calculate weight of parish in each subcounty\n",
-    "total_demographic['weight']=total_demographic['tot_pop_parish']/total_demographic['tot_pop_subcounty']\n",
+    "# calculate weight of parish in each subcounty\n",
+    "total_demographic['weight'] = total_demographic['tot_pop_parish'] / \\\n",
+    "    total_demographic['tot_pop_subcounty']\n",
     "\n",
-    "#check all weights equal to one\n",
-    "total_demographic[['subcounty','weight']].groupby('subcounty').sum().sum()==len(total_demographic[['subcounty']].groupby('subcounty'))"
+    "# check all weights equal to one\n",
+    "total_demographic[['subcounty', 'weight']].groupby('subcounty').sum(\n",
+    ").sum() == len(total_demographic[['subcounty']].groupby('subcounty'))"
    ]
   },
   {
@@ -1489,10 +1498,11 @@
     }
    ],
    "source": [
-    "#multiply all values by weight of the parish and update current dataframe\n",
-    "total_demographic.iloc[:,2:-1]=total_demographic.iloc[:,2:-1].multiply(total_demographic['weight'], axis='index')\n",
+    "# multiply all values by weight of the parish and update current dataframe\n",
+    "total_demographic.iloc[:, 2:-1] = total_demographic.iloc[:,\n",
+    "                                                         2:-1].multiply(total_demographic['weight'], axis='index')\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "total_demographic.head()"
    ]
   },
@@ -1824,10 +1834,10 @@
     }
    ],
    "source": [
-    "#collapse by subcounty, adding up all the weighted values, giving us a weighted average\n",
-    "subcounty_demographic=total_demographic.groupby('subcounty').sum()\n",
+    "# collapse by subcounty, adding up all the weighted values, giving us a weighted average\n",
+    "subcounty_demographic = total_demographic.groupby('subcounty').sum()\n",
     "\n",
-    "#check that no column is more than 100 (except for population)\n",
+    "# check that no column is more than 100 (except for population)\n",
     "subcounty_demographic.describe()"
    ]
   },
@@ -2059,10 +2069,10 @@
     }
    ],
    "source": [
-    "#making subcounty a column\n",
+    "# making subcounty a column\n",
     "subcounty_demographic.reset_index(inplace=True)\n",
     "\n",
-    "#check\n",
+    "# check\n",
     "subcounty_demographic.head()"
    ]
   },
@@ -2115,10 +2125,11 @@
     }
    ],
    "source": [
-    "#drop parish and weight columns as now irrelevant\n",
-    "subcounty_demographic_clean=pd.DataFrame(subcounty_demographic.drop(columns=['weight', 'tot_pop_parish']))\n",
+    "# drop parish and weight columns as now irrelevant\n",
+    "subcounty_demographic_clean = pd.DataFrame(\n",
+    "    subcounty_demographic.drop(columns=['weight', 'tot_pop_parish']))\n",
     "\n",
-    "#check current columns\n",
+    "# check current columns\n",
     "subcounty_demographic_clean.info()"
    ]
   },
@@ -2171,7 +2182,7 @@
     }
    ],
    "source": [
-    "#check column datatypes are in correct format\n",
+    "# check column datatypes are in correct format\n",
     "subcounty_demographic_clean.info()"
    ]
   },
@@ -2190,10 +2201,10 @@
     }
    ],
    "source": [
-    "#rechecking null values and duplicated columns\n",
-    "print(subcounty_demographic_clean.isna().sum().sum()>0,\\\n",
-    "      subcounty_demographic_clean.duplicated().sum()>0,\\\n",
-    "      subcounty_demographic_clean.T.duplicated().sum()>0)"
+    "# rechecking null values and duplicated columns\n",
+    "print(subcounty_demographic_clean.isna().sum().sum() > 0,\n",
+    "      subcounty_demographic_clean.duplicated().sum() > 0,\n",
+    "      subcounty_demographic_clean.T.duplicated().sum() > 0)"
    ]
   },
   {
@@ -2203,8 +2214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#replacing column name to match other datasets\n",
-    "subcounty_demographic_clean.rename(columns={'subcounty': 'clean_adm4'}, inplace=True)"
+    "# replacing column name to match other datasets\n",
+    "subcounty_demographic_clean.rename(\n",
+    "    columns={'subcounty': 'clean_adm4'}, inplace=True)"
    ]
   },
   {
@@ -2214,8 +2226,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export to cleaned dataset to csv\n",
-    "subcounty_demographic_clean.to_csv('/Users/thomasadler/Desktop/capstone_docs/subcounty_demographic_clean.csv')"
+    "# export to cleaned dataset to csv\n",
+    "subcounty_demographic_clean.to_csv(\n",
+    "    '/Users/thomasadler/Desktop/capstone_docs/subcounty_demographic_clean.csv')"
    ]
   }
  ],
