--- a/notebooks/ta_30_access_conflict_data.ipynb
+++ b/notebooks/ta_30_access_conflict_data.ipynb
@@ -87,7 +87,9 @@
    "outputs": [],
    "source": [
     "# sending post request\n",
-    "conflict_r = requests.get(f'{conflict_api_endpoint}?key={conflict_api_key}&email={conflict_api_email}&limit=0&iso={uganda_iso}.csv')\n",
+    "conflict_r = requests.get(\n",
+    "    f'{conflict_api_endpoint}?key={conflict_api_key}&email={conflict_api_email}&limit=0&iso={uganda_iso}.csv'\n",
+    ")\n",
     "\n",
     "#saving as json data\n",
     "data = conflict_r.json()\n",
@@ -107,7 +109,7 @@
    "outputs": [],
    "source": [
     "#leaving raw dataset untouched\n",
-    "uganda_conflict_df= uganda_conflict.copy()"
+    "uganda_conflict_df = uganda_conflict.copy()"
    ]
   },
   {
@@ -451,7 +453,11 @@
    ],
    "source": [
     "#convert to number\n",
-    "num_columns=['latitude', 'longitude', 'fatalities',]\n",
+    "num_columns = [\n",
+    "    'latitude',\n",
+    "    'longitude',\n",
+    "    'fatalities',\n",
+    "]\n",
     "\n",
     "for col in num_columns:\n",
     "    float_converter(uganda_conflict_df, col)\n",
@@ -566,10 +572,18 @@
    ],
    "source": [
     "#checking administrative levels match the water dataset\n",
-    "print('admin1 in the conflict dataset should be clean_adm1 in the water dataset, check with:',uganda_conflict_df['admin1'].head(1)[0])\n",
-    "print('admin2 in the conflict dataset should be clean_adm2 in the water dataset, check with:',uganda_conflict_df['admin2'].head(1)[0])\n",
-    "print('admin3 in the conflict dataset should be clean_adm3 in the water dataset, check with:',uganda_conflict_df['admin3'].head(1)[0])\n",
-    "print('location in the conflict dataset should be clean_adm4 in the water dataset, check with:',uganda_conflict_df['location'].head(1)[0])"
+    "print(\n",
+    "    'admin1 in the conflict dataset should be clean_adm1 in the water dataset, check with:',\n",
+    "    uganda_conflict_df['admin1'].head(1)[0])\n",
+    "print(\n",
+    "    'admin2 in the conflict dataset should be clean_adm2 in the water dataset, check with:',\n",
+    "    uganda_conflict_df['admin2'].head(1)[0])\n",
+    "print(\n",
+    "    'admin3 in the conflict dataset should be clean_adm3 in the water dataset, check with:',\n",
+    "    uganda_conflict_df['admin3'].head(1)[0])\n",
+    "print(\n",
+    "    'location in the conflict dataset should be clean_adm4 in the water dataset, check with:',\n",
+    "    uganda_conflict_df['location'].head(1)[0])"
    ]
   },
   {
@@ -580,7 +594,13 @@
    "outputs": [],
    "source": [
     "#replacing column name to match other datasets\n",
-    "uganda_conflict_df.rename(columns={'admin1': 'clean_adm1','admin2': 'clean_adm2','admin3': 'clean_adm3', 'location':'clean_adm4'}, inplace=True)"
+    "uganda_conflict_df.rename(columns={\n",
+    "    'admin1': 'clean_adm1',\n",
+    "    'admin2': 'clean_adm2',\n",
+    "    'admin3': 'clean_adm3',\n",
+    "    'location': 'clean_adm4'\n",
+    "},\n",
+    "                          inplace=True)"
    ]
   },
   {
