--- a/notebooks/ta_10_access-water_data.ipynb
+++ b/notebooks/ta_10_access-water_data.ipynb
@@ -1730,7 +1730,7 @@
     }
    ],
    "source": [
-    "# fill the final null values with the median value of the whole dataset\n",
+    "# fill the final null values with the median value of the whole country\n",
     "for col in cols_to_impute:\n",
     "    uganda_water_df_clean[col] = uganda_water_df_clean[col].fillna(\n",
     "        uganda_water_df_clean[col].median())\n",
